src/objects/DataLoad__c.object
<CustomObject>
    <fields>
        <fullName>AQ_Id__c</fullName>
        <label>AQ Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWT100__c</fullName>
        <label>AWT100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWT101__c</fullName>
        <label>AWT101</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWT102__c</fullName>
        <label>AWT102</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Section_Id__c</fullName>
        <label>Form Section Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Section__c</fullName>
        <label>Form Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Branching_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Branching Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DataLoad</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>DataLoad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataLoads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>